--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
   <body>
     <main>
     </main>
-    <script src="welcome.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
